--- a/css/task-2.2.3.css
+++ b/css/task-2.2.3.css
@@ -6,6 +6,13 @@ img {
 h1 {
 
     color: green;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80px;
+}
+
+h2 {
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 a {
@@ -26,6 +33,8 @@ h3 {
 
     background-color: fuchsia;
     max-width: 300px; 
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 40px;
 
 i.latin {
 
