--- a/css/task-2.2.5.css
+++ b/css/task-2.2.5.css
@@ -22,6 +22,18 @@ p em {
     
     }
 
+.pink {
+
+        background-color: pink;
+        
+        }
+
+p strong.pink {
+
+        background-color: gold;
+
+}
+
 p strong {
 
     font-size: 25px;
