--- a/css/task-2.3.4.css
+++ b/css/task-2.3.4.css
@@ -2,5 +2,6 @@ header, main, footer {
 
     border: 2px dotted green;
     padding: 10px;
-    margin: 20px;
+    width: 100px;
+    margin: 20px auto;
 }
